vendor/feedvalidator/demo/testcases/opml/errors/missingOpml.opml
<?xml version="1.0" encoding="ISO-8859-1"?>

<!--
  Description:	Missing OPML
  Expect:	UndefinedElement{parent:root,element:haha}
-->

<haha version="1.1"/>
